--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "4.7.1",
+    "@material-ui/icons": "4.5.1",
+    "exact": "^0.8.0",
     "react": "16.8.2",
     "react-dom": "16.8.2",
     "react-router-dom": "4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
