--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "4.7.1",
     "@material-ui/icons": "4.5.1",
     "exact": "^0.8.0",
+    "firebase": "7.5.0",
     "react": "16.8.2",
     "react-dom": "16.8.2",
     "react-router-dom": "4.3.1",
